# onecopy

./: .gitignore  README.md  project_structure.txt  pyproject.toml
onecopy/: __init__.py  app.py  elevated_copy.py  io.py  main_window.py  utils.py  workers.py
onecopy/qss/: dark.qss  light.qss
packaging/: onecopy.desktop
packaging/appimage/: xyz.onecopy.policy
packaging/policy/: xyz.onecopy.policy
test/: manual-qa-checklist.md
